edited, all containers done, all buttons added, calendar fixed. not responsive.

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -23,7 +23,7 @@
 .cover-pic-div{
     -webkit-box-align: center;
     align-items: center;
-    background-color: #f9f9f9;
+    background-color: #959595;
     color: #ebebeb;
     display: -webkit-box;
     display: flex;
@@ -65,8 +65,7 @@
     width: 100%;
 }
 
-/*PROFILE PICTURE*/
-.profile-wrapper{
+.profilecontent{
     margin: -10% 4% 0 4%;
     max-width: 1760px;
     min-height: 101vh;
@@ -88,7 +87,7 @@
 .profile-pic-div{
     height: 200px;
     width: 200px;
-    background-color: rgb(255, 255, 255);
+    background-color: #959595;
     border-radius: 50%;
     display: inline-block;
     margin-bottom: 2px;
@@ -124,20 +123,13 @@
     margin-bottom: 10px;
 }
 
-.editprofilebutton, .switchBox{
+.switchBox{
     font-weight: bold;
     padding: 5px 15px;
     border-radius: 10px;
     border: none;
     width: 60%;
     display: inline-flex;
-}
-
-.editprofilebutton{
-    background-color: #0a95ca;
-    color: #fff;
-    justify-content: center;
-    margin-bottom: 7px;
 }
 
 .switchBox{
@@ -193,7 +185,39 @@ input:checked + .slider:before {
     left: 6rem;
     top: 0rem;
     font-weight: bold;
+}
 
+.profilebuttons{
+    margin: -180px 0 0 320px
+}
+
+.editprofilebutton, .messageprofilebtn, .saveprofilebutton, .cancelprofilebutton{
+    background-color: #1875ff;
+    border-radius: 5px;
+}
+
+.cancelprofilebutton{
+    background-color: #7c7c7c;
+    color: #fff;
+}
+
+.profile-button{
+    display: flex;
+}
+
+.rightbutton{
+    margin-left: 75%;
+    position: absolute;
+}
+
+.inputCont{
+    margin: 10px;
+    width: 108%;
+    border: none;
+}
+
+.profile-input{
+    font-size: 16px;
 }
 
 /*CALENDAR*/
@@ -204,12 +228,12 @@ input:checked + .slider:before {
     color: #000;
     justify-content: center;
     align-items: center;
-    top: 40rem;
+    top: 35rem;
 }
 
 .calendar{
     width: 30rem;
-    height: 30rem;
+    height: 35rem;
     background-color: #ffff;
     box-shadow: 0 3px 5px rgb(25 25 25 / 30%);
 }
@@ -245,7 +269,7 @@ input:checked + .slider:before {
     font-size: 1rem;
     margin-top: -1rem;
 }
-  
+
 .weekdays{
     width: 100%;
     height: 3rem;
@@ -253,7 +277,7 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
 }
-  
+
 .weekdays div{
     font-size: 1rem;
     font-weight: 400;
@@ -264,18 +288,18 @@ input:checked + .slider:before {
     align-items: center;
     text-shadow: 0 0.3rem 0.5rem rgb(0 0 0 / 20%);
 }
-  
+
 .days{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     padding: 0.3;
 }
-  
+
 .days div{
     font-size: 1rem;
     margin-bottom: 2.5rem;
-    width: calc(6.5rem / 2);
+    width: calc(6.4rem / 1.5);
     height: 2rem;
     display: flex;
     justify-content: center;
@@ -283,7 +307,7 @@ input:checked + .slider:before {
     text-shadow: 0 0.1rem 0.2rem rgb(0 0 0 / 20%);
     transition: background-color 0.2s;
 }
-  
+
 .days div:hover:not(.today){
     background-color: #0a95ca;
     border: 0.1rem solid #777;
@@ -298,60 +322,16 @@ input:checked + .slider:before {
     background-color: #0a95ca;
 }
 
-.profileboxesContainer{
-    width: 80%;
-    background-color: antiquewhite;
-    margin-left: 25%;
-}
-
-/*MESSAGE BUTTON*/
-.messageprofilebtn{
-    border-radius: 10px;
-    padding: 5px;
-    position: absolute;
-    margin-top: -23rem;
-    margin-left: 75%;
-}
-
-.profileDesc{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: -17.5rem;
-    left: 21%;
-    width: auto;
-    color: rgb(63, 63, 63);
-}
-
-.descbuttons{
-    width: 70%;
-}
-
-.descprofilebtn, .descprofilebtnsave{
-    border-radius: 10px;
-    padding: 2px;
-    width: 10%;
-    margin-top: 5px;
-}
-
-.descprofilebtnsave{
-    background-color: #0a95ca;
-    color: #fff;
-}
-
-.descprofilebtnsave:hover{
-    background-color: rgb(255, 255, 255);
-}
-
 .profileProjwrapper{
     background-color: #c5c5c5;
     padding: 25px;
     position: relative;
     margin-left: 33.5rem;
-    margin-top: -15rem;
-    width: 50%;
+    margin-top: 12rem;
+    width: 60%;
     height: auto;
 }
+
 .card-title{
     font-size: 18px;
     text-align: center;
@@ -366,8 +346,8 @@ input:checked + .slider:before {
     height: 10rem;
     width: 22rem;
     border: 1px solid #afaeae;
-    top: 35.5rem;
-    left: 82%;
+    top: 34.6rem;
+    left: 93%;
     text-align: center;
 }
 
@@ -379,7 +359,6 @@ input:checked + .slider:before {
 .rating{
     display: flex;
     height: 2rem;
-
 }
 
 .rating label{
@@ -413,4 +392,22 @@ input:checked + .slider:before {
  
 .rating input{
     display: none;
+}
+
+.eduAttainment{
+    height: 30px;
+}
+
+.info-cont{
+    position: relative;
+    height: 10rem;
+    width: 22rem;
+    border: 1px solid #afaeae;
+    top: -34rem;
+    left: 99.7rem;
+    text-align: center;
+}
+
+.eduAttainment, .expertise, .contact-info{
+    border: none;
 }
